--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/ui": "^2.18.7",
+    "@nuxtjs/supabase": "^1.4.1",
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest",
