--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
     "@nuxt/ui": "^2.18.7",
+    "@nuxtjs/seo": "^2.0.0-rc.23",
     "@nuxtjs/supabase": "^1.4.1",
     "nuxt": "^3.13.2",
     "uuid": "^11.0.2",
